# simulator-demo

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md
.devcontainer/: Dockerfile  devcontainer.json
archive/: ecs.cpp
shaders/test_ecs/: compute.sc
src/: CMakeLists.txt  ecs_test.cpp  main.cpp
src/platform/: macos_window.mm  platform_window.cpp  platform_window.h
src/store/: ecs.h  ecs.tpp
src/test/: CMakeLists.txt
src/test/ecs/: CMakeLists.txt  ecs_test.cpp
